src/objects/Lcm_TicketSnapshot__c.object
<CustomObject>
    <description>Täglicher Ticketstand</description>
    <fields>
        <fullName>Lcm_BusinessValue__c</fullName>
        <description>Abschätzung des Business Value durch den Fachbereich</description>
        <inlineHelpText>Abschätzung des Business Value durch den Fachbereich</inlineHelpText>
        <label>Business Value</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_ClosedDate__c</fullName>
        <label>Datum/Uhrzeit geschlossen</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lcm_Cluster__c</fullName>
        <description>Einteilung der Advendio-Tickets in Cluster</description>
        <inlineHelpText>Einteilung der Advendio-Tickets in Cluster</inlineHelpText>
        <label>Cluster</label>
        <picklist>
            <picklistValues>
                <fullName>AdTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;B ADvendio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;B SaS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting DWH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting SaS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_Complexity__c</fullName>
        <description>Komplexität der Umsetzung in Storypoints</description>
        <inlineHelpText>Komplexität der Umsetzung in Storypoints</inlineHelpText>
        <label>Storypoints</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_CreatedDate__c</fullName>
        <label>Datum/Uhrzeit geöffnet</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lcm_ExtCaseNo__c</fullName>
        <label>externe Ticket-Nr.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_KanStation__c</fullName>
        <label>Kanban Station</label>
        <picklist>
            <picklistValues>
                <fullName>FuncSpec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoLive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_KanStatus__c</fullName>
        <label>Kanban Status</label>
        <picklist>
            <picklistValues>
                <fullName>doing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>done</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_Prioritaet__c</fullName>
        <description>Priorisierung des Tickets: 
Blocker - keine Fortführung der Haupttätigkeit möglich; 
Kritisch - Workarounds für Haupttätigkeit vorhanden; 
Schwer - Workarounds vorhanden; 
Unwesentlich - Verlust unbedeutender Funktion; 
Trival - &quot;nice to have&quot;.</description>
        <inlineHelpText>Priorisierung des Tickets: 
Blocker - keine Fortführung der Haupttätigkeit möglich; 
Kritisch - Workarounds für Haupttätigkeit vorhanden; 
Schwer - Workarounds vorhanden; 
Unwesentlich - Verlust unbedeutender Funktion; 
Trival - &quot;nice to have&quot;.</inlineHelpText>
        <label>Priorität</label>
        <picklist>
            <picklistValues>
                <fullName>Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kritisch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schwer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unwesentlich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trivial</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_Projekt__c</fullName>
        <description>Welches Projekt betrifft dieser Vorgang?</description>
        <inlineHelpText>Welches Projekt betrifft dieser Vorgang?</inlineHelpText>
        <label>Projekt</label>
        <picklist>
            <picklistValues>
                <fullName>7Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adv Betrieb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adv Delta Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adv Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adv Modularisierung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adv Sonstiges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM-TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liferay 2 SF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;A Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Transparency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prodia Ablöse Österreich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puls4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SevenVentures GmbH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio71</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architektur</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_ReOpenDateTime__c</fullName>
        <label>(Re-)Open Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lcm_RequirementName__c</fullName>
        <label>Requirement-Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_RequirementNr__c</fullName>
        <label>Requirement-Nr.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Severity__c</fullName>
        <description>Kritikalität des Tickets, Vegrabe durch Incident Manager 

1 - keine Fortführung Haupttätigkeit 
2 - Blocker/Kritisch: Workarounds Haupttätigkeit vorhanden (hoher Aufwand &amp; zeitkritisch) 
3 - Schwer: Verlust wichtiger Funktion (Workarounds &amp; zeitunkritisch) 
4 - Unwesentlich: Verlust unbedeutender Funktion</description>
        <inlineHelpText>1 - keine Fortführung Haupttätigkeit 
2 - Blocker/Kritisch: Workarounds Haupttätigkeit vorhanden (hoher Aufwand &amp; zeitkritisch) 
3 - Schwer: Verlust wichtiger Funktion (Workarounds &amp; zeitunkritisch) 
4 - Unwesentlich: Verlust unbedeutender Funktion</inlineHelpText>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_Sprint__c</fullName>
        <label>Sprint</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Status__c</fullName>
        <description>Was ist der aktuelle Status des Tickets?</description>
        <inlineHelpText>Was ist der aktuelle Status des Tickets?</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Neu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuer Kommentar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in Bearbeitung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in Warteschleife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wartet auf Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wartet auf Dienstleister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eskaliert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geschlossen</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Team A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Andere Projekte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team F</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_TestErgebnis__c</fullName>
        <label>Test-Ergebnis</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_TicketNr__c</fullName>
        <label>Ticket-Nr.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Ticketinhaber__c</fullName>
        <label>Ticketinhaber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Typ__c</fullName>
        <description>Klassifizierung des Tickets: 
Funktionsanforderung - neue oder erweiterte Funktion; 
Problem - Programm- oder Softwarefehler; 
Frage - Anfragen zu diversen Themen.</description>
        <inlineHelpText>Klassifizierung des Tickets: 
Funktionsanforderung - neue oder erweiterte Funktion; 
Problem - Programm- oder Softwarefehler; 
Frage - Anfragen zu diversen Themen.</inlineHelpText>
        <label>Typ</label>
        <picklist>
            <picklistValues>
                <fullName>Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funktion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aufgabe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sammelvorgang</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Ticket Snapshot</label>
    <nameField>
        <displayFormat>TISS-{0000}</displayFormat>
        <label>Ticket Snapshot-Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>